--- a/TODO
+++ b/TODO
@@ -5,7 +5,6 @@ TODO
 check title for each page
 
 DONE 50%
-1.Index
 2.Photogallery
 3.About Us
 4.Student Association
@@ -20,8 +19,12 @@ DONE 50%
   :-Academic Calender
   :-Events (EMPTY)
 11.Courses
-12.BoS Composition
 13.
+
+DONE 80%
+1.Index
+12.BoS Composition
+
 
 DONE 100%
 
